--- a/stylecadastro.css
+++ b/stylecadastro.css
@@ -1,8 +1,7 @@
 body {
     height: 600px;
     width: 100%;
-    background: rgb(34, 193, 195);
-    background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, rgba(123, 176, 242, 1) 100%);
+    background: linear-gradient(to bottom, #00d0ff, #0095ff) no-repeat center center fixed;
 
     font: 14px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
@@ -37,4 +36,8 @@ input[type="submit"] {
     color: #fff;
     font-size: 18px;
     cursor: pointer;
+}
+
+a {
+    text-decoration: none;
 }
